<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <parent>
        <groupId>org.springframework.boot</groupId>
        <artifactId>spring-boot-starter-parent</artifactId>
        <version>2.6.7</version>
        <relativePath/> <!-- lookup parent from repository -->
    </parent>

    <groupId>fr.ght1pc9kc</groupId>
    <artifactId>baywatch</artifactId>
    <version>1.0.0-SNAPSHOT</version>
    <name>baywatch</name>
    <packaging>pom</packaging>

    <modules>
        <module>sandside</module>
        <module>seaside</module>
        <module>assembly</module>
    </modules>

    <properties>
        <java.version>17</java.version>

        <db.driver>org.h2.Driver</db.driver>
        <db.url>jdbc:h2:file:${project.basedir}/target/jooq_baywatch</db.url>
        <db.username>security</db.username>
        <db.password>security</db.password>

        <juery.version>1.2.1</juery.version>
        <scraphead.version>1.1.0-SNAPSHOT</scraphead.version>
        <html-sanitizer.version>20211018.2</html-sanitizer.version>
        <noexception.version>1.7.1</noexception.version>
        <unbescape.version>1.1.6.RELEASE</unbescape.version>
        <ulid-creator.version>4.2.1</ulid-creator.version>
        <mapstruct.version>1.4.2.Final</mapstruct.version>
        <nimbus-jose-jwt.version>9.22</nimbus-jose-jwt.version>
        <findbugs.version>3.0.2</findbugs.version>
        <jetbrains.version>23.0.0</jetbrains.version>
        <wiremock.version>2.27.2</wiremock.version>
        <testy-box.version>1.8.0</testy-box.version>

        <maven-clean-plugin.version>3.2.0</maven-clean-plugin.version>
        <exec-maven-plugin.version>3.0.0</exec-maven-plugin.version>
        <maven-assembly-plugin.version>3.3.0</maven-assembly-plugin.version>
        <maven-resources-plugin.version>3.2.0</maven-resources-plugin.version>
        <jib-maven-plugin.version>3.2.1</jib-maven-plugin.version>
    </properties>

    <build>
        <pluginManagement>
            <plugins>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-assembly-plugin</artifactId>
                    <version>${maven-assembly-plugin.version}</version>
                </plugin>
                <plugin>
                    <groupId>org.codehaus.mojo</groupId>
                    <artifactId>exec-maven-plugin</artifactId>
                    <version>${exec-maven-plugin.version}</version>
                </plugin>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-clean-plugin</artifactId>
                    <version>${maven-clean-plugin.version}</version>
                </plugin>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-resources-plugin</artifactId>
                    <version>${maven-resources-plugin.version}</version>
                </plugin>
                <plugin>
                    <groupId>com.google.cloud.tools</groupId>
                    <artifactId>jib-maven-plugin</artifactId>
                    <version>${jib-maven-plugin.version}</version>
                </plugin>
            </plugins>
        </pluginManagement>
    </build>
</project>
